sw/source/writerfilter/dmapper/DomainMapper.cxx
@@ -150,6 +150,7 @@ DomainMapper::DomainMapper( const uno::Reference< uno::XComponentContext >& xCon
         //paint background frames after header/footer when anchored in body
         m_pImpl->SetDocumentSettingsProperty(u"PaintHellOverHeaderFooter"_ustr,uno::Any(true));
         m_pImpl->SetDocumentSettingsProperty(u"EmptyDbFieldHidesPara"_ustr,uno::Any(false));
+        m_pImpl->SetDocumentSettingsProperty(u"IgnoreTabsAndBlanksForLineCalculation"_ustr,uno::Any(true));
     }
 
     // Initialize RDF metadata, to be able to add statements during the import.
